--- a/src/component/Shop/Shop.css
+++ b/src/component/Shop/Shop.css
@@ -8,3 +8,14 @@
     gap: 45px;
     margin: 50px;
 }
+.cart-container{
+    background-color:#d8bd93;
+    color:black;
+    width:264px;
+    height:944px;
+    text-align: center;
+}
+.order-summary-bar{
+    font-size: 20px;
+    font-family: 'Lato';
+}
