--- a/src/component/Product/Product.css
+++ b/src/component/Product/Product.css
@@ -37,7 +37,7 @@
 }
 .bts-cart{
     width:100%;
-    background-color: #FFE0B3;
+    background-color:rgba(255, 153, 0, 0.3);
     border: 1px solid #95A0A7;
     border-radius: 0px 0px 8px 8px;
     position: absolute;
